--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+*  {
+  transition-duration: .3s !important;
+  transition-property: resize ,height, width , background, transform,top,left,right,bottom,  box-shadow, padding !important;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +39,34 @@
     transform: rotate(360deg);
   }
 }
+
+.iconButton:hover {
+  background: #d9d9d9 !important;
+  box-shadow:0px 7px 7px rgba(0,0,0,0.4);
+}
+.todoCard:hover {
+  padding: 10px 0 !important;
+  box-shadow:0px 7px 7px rgba(0,0,0,0.4);
+}
+/* custome fonts */
+@font-face {
+  font-family: Alexandria;
+  src: url('/public/fonts/Alexandria-Black.ttf');
+  font-weight: 900;
+}
+@font-face {
+  font-family: Alexandria;
+  src: url('/public/fonts/Alexandria-Regular.ttf');
+  font-weight: normal;
+}
+@font-face {
+  font-family: Alexandria;
+  src: url('/public/fonts/Alexandria-Bold.ttf');
+  font-weight: bold;
+}
+@font-face {
+  font-family: Alexandria;
+  src: url('/public/fonts/Alexandria-Light.ttf');
+  font-weight: 200;
+}
+/* ==== custome fonts ==== /*/
