--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+body {
+  background-color: #0052d0 !important;
+}
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +38,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* custome fonts */
+
+@font-face {
+  font-family: IBM;
+  src: url("/public/fonts/IBM/IBMPlexSansArabic-Regular.ttf");
+  font-weight: 500;
+}
+@font-face {
+  font-family: IBM;
+  src: url("/public/fonts/IBM/IBMPlexSansArabic-Light.ttf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: IBM;
+  src: url("/public/fonts/IBM/IBMPlexSansArabic-Medium.ttf");
+  font-weight: 600;
 }
